ident profile implementation

--- a/src/components.siemens.identification/app/apax.yml
+++ b/src/components.siemens.identification/app/apax.yml
@@ -18,6 +18,7 @@ dependencies:
   "@ix-ax/axopen.components.siemens.identification": '0.0.0-dev.0'
   "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
   "@ax/simatic-1500-clocks": ^6.0.37
+  "@ax/system-serde": ^6.0.94
 scripts:
   delta:
     - START=$(date +%s)
