VAR_IN_OUT in ident Profile

--- a/src/components.siemens.identification/src/AXOpen.Components.Siemens.Identification/ix_ax_axopen_components_siemens_identification.csproj
+++ b/src/components.siemens.identification/src/AXOpen.Components.Siemens.Identification/ix_ax_axopen_components_siemens_identification.csproj
@@ -83,5 +83,6 @@
 	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\io\src\AXOpen.Io\ix_ax_axopen_io.csproj" />
 	</ItemGroup>
 </Project>
