--- a/src/core/app/apax.yml
+++ b/src/core/app/apax.yml
@@ -1,5 +1,5 @@
 name: "ix_axopencore"
-version        : '0.0.0-dev.0'
+version: '0.0.0-dev.0'
 type: app
 targets:
   - plcsim
@@ -8,10 +8,11 @@ variables:
   APAX_BUILD_ARGS:
     - "--debug" # Generate debug information for target "1500"
 devDependencies:
-  "@ix-ax/ax-sdk"        : '0.0.0-dev.0'
+  "@ix-ax/ax-sdk": '0.0.0-dev.0'
 dependencies:
-  "@ix-ax/axopen.core"        : '0.0.0-dev.0'
-  "@ix-ax/axopen.simatic1500"        : '0.0.0-dev.0'
+  "@ix-ax/axopen.core": '0.0.0-dev.0'
+  "@ix-ax/axopen.simatic1500": '0.0.0-dev.0'
+  "@ax/sdk": ^2311.0.1
 scripts:
   ixc:
     - START=$(date +%s)
