--- a/src/template.axolibrary/src/projname/ix_ax_apaxlibname.csproj
+++ b/src/template.axolibrary/src/projname/ix_ax_apaxlibname.csproj
@@ -83,5 +83,6 @@
 	  <ProjectReference Include="..\..\..\components.abstractions\src\AXOpen.Components.Abstractions\ix_ax_axopen_components_abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\timers\src\AXOpen.Timers\ix_ax_axopen_timers.csproj" />
 	  <ProjectReference Include="..\..\..\abstractions\src\AXOpen.Abstractions\ix_ax_axopen_abstractions.csproj" />
+	  <ProjectReference Include="..\..\..\io\src\AXOpen.Io\ix_ax_axopen_io.csproj" />
 	</ItemGroup>
 </Project>
