--- a/src/components.siemens.identification/app/apax.yml
+++ b/src/components.siemens.identification/app/apax.yml
@@ -38,72 +38,78 @@ dependencies:
   "@ax/system-serde": ^6.0.94
   "@ax/plc-mode": ^1.0.0
 scripts:
-  delta:
-    - START=$(date +%s)
-    - apax build --ignore-scripts
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
-      $AXTARGETPLATFORMINPUT --mode delta
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
-      :" $(expr $(date +%s) - $START) "s"
-  download:
-    - START=$(date +%s)
-    - apax build --ignore-scripts
-    - dotnet ixc
-    - apax download_only
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
-      :" $(expr $(date +%s) - $START) "s"
-  ixc:
-    - START=$(date +%s)
-    - dotnet tool restore
-    - dotnet ixc
-    - echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
-  download_only:
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
-      $AXTARGETPLATFORMINPUT -r
+  delta: |
+    START=$(date +%s) 
+    apax build --ignore-scripts 
+    apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT --mode delta 
+    echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in:" $(expr $(date +%s) - $START) "s"
+
+  download: |
+    START=$(date +%s) 
+    apax build --ignore-scripts 
+    dotnet ixc 
+    apax download_only 
+    echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in:" $(expr $(date +%s) - $START) "s"
+
+  ixc: |
+    START=$(date +%s) 
+    dotnet tool restore 
+    dotnet ixc 
+    echo "Built by ixc in :" $(expr $(date +%s) - $START) "s"
+
+  download_only: |
+    apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r
+
   check+download: |
     if [ $AXTARGET ]; then
-      if [ $AXTARGETPLATFORMINPUT ]; then
-        if ping -n 1 $AXTARGET &> /dev/null; then
-          echo "Downloading from:" $AXTARGETPLATFORMINPUT "=>" $AXTARGET
-          apax download_only
-        else
-          echo "Target with IP address:" $AXTARGET "is not accessible. No download is going to be performed!!!"
-        fi
-      else
-        echo "Environment variable AXTARGETPLATFORMINPUT not defined!!!"
-      fi
-    else
-      echo "Environment variable AXTARGET not defined!!!"
-    fi
-  postbuild:
-    - apax ixc
-  watch:
-    - dotnet watch --project
-      ..\\app\\ix-blazor\\AXOpen.Components.Siemens.Identification.blazorapp.csproj
-  fr:
-    - ..\\..\\integrations\\scripts\\StartPlcSimAdvCli.exe
-    - apax rr
-  frw:
-    - apax fr
-    - apax watch
-  rr:
-    - START=$(date +%s)
-    - apax install
-    - apax download
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
-      :" $(expr $(date +%s) - $START) "s"
-  rrw:
-    - apax rr
-    - apax watch
-  r:
-    - apax plc-mode set stop -t $AXTARGET -y
-    - apax plc-mode set run -t $AXTARGET -y
-  d:
-    - apax download
-  do:
-    - apax download_only
-  dd:
-    - apax delta
+       if [ $AXTARGETPLATFORMINPUT ]; then
+         if ping -n 1 $AXTARGET &> /dev/null; then
+           echo "Downloading from:" $AXTARGETPLATFORMINPUT "=>" $AXTARGET
+           apax download_only
+         else
+           echo "Target with IP address:" $AXTARGET "is not accessible. No download is going to be performed!!!"
+         fi
+       else
+         echo "Environment variable AXTARGETPLATFORMINPUT not defined!!!"
+       fi
+     else
+       echo "Environment variable AXTARGET not defined!!!"
+     fi
+
+  postbuild: |
+    apax ixc
+
+  watch: |
+    dotnet watch --project
+    ..\\app\\ix-blazor\\AXOpen.Components.Siemens.Identification.blazorapp.csproj
+
+  fr: |
+    ..\\..\\integrations\\scripts\\StartPlcSimAdvCli.exe 
+    apax rr
+
+  frw: |
+    apax fr 
+    apax watch
+
+  rr: |
+    START=$(date +%s) 
+    apax install 
+    apax download 
+    echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in:" $(expr $(date +%s) - $START) "s"
+
+  rrw: |
+    apax rr 
+    apax watch
+
+  r: |
+    apax plc-mode set stop -t $AXTARGET -y 
+    apax plc-mode set run -t $AXTARGET -y
+
+  d: apax download
+
+  do: apax download_only
+
+  dd: apax delta
 
   gsd: | # copy and install all gsdml files from library
     if [ -d "../ctrl/assets" ]; then
@@ -118,57 +124,47 @@ scripts:
       echo "Directory "../ctrl/assets" does not exist!!!"
     fi   
 
-  dcpli: apax dcp-utility list-interfaces -f JSON # list all interfaces, used to discover MAC address of the adapter connected to PLC and set the PC_MAC value accordingly
+  dcpli: | # list all interfaces, used to discover MAC address of the adapter connected to PLC and set the PC_MAC value accordingly
+    apax dcp-utility list-interfaces -f JSON 
 
-  dcpd: apax dcp-utility discover --source-mac $PC_MAC --timeout 10000 # discover all accesible devices connected to adapter with MAC address equal to PC_MAC, used to discover MAC-addresses of the slaves and setting the PLC_MAC,RF186_MAC and ET201_MAC variables
+  dcpd: | # discover all accesible devices connected to adapter with MAC address equal to PC_MAC, used to discover MAC-addresses of the slaves and setting the PLC_MAC,RF186_MAC and ET201_MAC variables
+    apax dcp-utility discover --source-mac $PC_MAC --timeout 10000 
 
-  reset_plc: apax hwld -t $PLC_IP --resetPlc All --accept-security-disclaimer #total reset of the PLC including IP and name
+  reset_plc: | #total reset of the PLC including IP and name
+    apax hwld -t $PLC_IP --resetPlc All --accept-security-disclaimer 
 
-  set_IPs_and_Names:
-    # setting the IPs and names according to variables PLC_NAME,PLC_IP,RF186_NAME,RF186_IP,ET201_NAME and ET201_IP
-    - apax dcp-utility set-name --source-mac $PC_MAC --target-mac $PLC_MAC
-      -n     $PLC_NAME --no-prompt
-    - apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $PLC_MAC
-      --ip   $PLC_IP   --subnet-mask 255.255.255.0 --gateway
-      $GATEWAY_IP  --no-prompt
-    - apax dcp-utility set-name --source-mac $PC_MAC --target-mac $RF186_MAC
-      -n   $RF186_NAME --no-prompt
-    - apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $RF186_MAC
-      --ip $RF186_IP   --subnet-mask 255.255.255.0 --gateway
-      $GATEWAY_IP  --no-prompt
-    - apax dcp-utility set-name --source-mac $PC_MAC --target-mac $ET201_MAC
-      -n   $ET201_NAME --no-prompt
-    - apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $ET201_MAC
-      --ip $ET201_IP   --subnet-mask 255.255.255.0 --gateway
-      $GATEWAY_IP  --no-prompt
+  clean_plc: | #total reset of the PLC excluding only the IP and name
+    apax hwld -t $PLC_IP --resetPlc KeepOnlyIP --accept-security-disclaimer 
 
-  ssc:
-    # setup secure communication, import certificates, setup password for 'usr'
-    - apax hwc setup-secure-communication -n $PLC_NAME -i "plc_line.hwl.json" -p
-      $MY_VERY_STRONG_PASSWORD
-    - apax hwc import-certificate -n $PLC_NAME -i "plc_line.hwl.json" -C
-      "./certs/$PLC_NAME/pkcs12ForCertificateImport.p12" -p
-      $MY_VERY_STRONG_PASSWORD --purpose "TLS"
-    - apax hwc import-certificate -n $PLC_NAME -i "plc_line.hwl.json" -C
-      "./certs/$PLC_NAME/pkcs12ForCertificateImport.p12" -p
-      $MY_VERY_STRONG_PASSWORD --purpose "WebServer"
-    - apax hwc manage-users -n $PLC_NAME -i "plc_line.hwl.json" set-password -u
-      "usr" -p $MY_VERY_STRONG_PASSWORD
+  set_IPs: | # setting the IPs and names according to variables PLC_NAME,PLC_IP,RF186_NAME,RF186_IP,ET201_NAME and ET201_IP
+    apax dcp-utility set-name --source-mac $PC_MAC --target-mac $PLC_MAC    -n   $PLC_NAME   --no-prompt
+    apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $PLC_MAC    --ip $PLC_IP     --subnet-mask 255.255.255.0 --gateway $GATEWAY_IP  --no-prompt
+    apax dcp-utility set-name --source-mac $PC_MAC --target-mac $RF186_MAC  -n   $RF186_NAME --no-prompt
+    apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $RF186_MAC  --ip $RF186_IP   --subnet-mask 255.255.255.0 --gateway $GATEWAY_IP  --no-prompt
+    apax dcp-utility set-name --source-mac $PC_MAC --target-mac $ET201_MAC  -n   $ET201_NAME --no-prompt
+    apax dcp-utility set-ip   --source-mac $PC_MAC --target-mac $ET201_MAC  --ip $ET201_IP   --subnet-mask 255.255.255.0 --gateway $GATEWAY_IP  --no-prompt
 
-  hwfd:
-    #compile, copy the HdIds, first download HW using password and upload certificate
-    - apax hwc compile -i plc_line.hwl.json -o bin/hwc/
-    - apax hwid
-    - apax hwld -i bin/hwc/$PLC_NAME -t $PLC_IP -M:$MY_VERY_STRONG_PASSWORD
-      --accept-security-disclaimer -l Information
-    - apax plc-cert -t $PLC_IP -o ./certs/$PLC_NAME/$PLC_NAME.cer
-  hwu:
-    #compile, copy the HdIds, download HW using certificate
-    - apax hwc compile -i plc_line.hwl.json -o bin/hwc/
-    - apax hwid
-    - apax hwld -i bin/hwc/$PLC_NAME -t $PLC_IP -C
-      ./certs/$PLC_NAME/$PLC_NAME.cer --nonInteractive
-      --accept-security-disclaimer -l Information
+  ssc: | # setup secure communication, import certificates, setup password for 'usr'
+    SecurConf=$PLC_NAME.SecurityConfiguration.json
+    if [[ -e $SecurConf ]]; then
+       rm "$SecurConf"
+    fi
+    apax hwc setup-secure-communication     -n $PLC_NAME -i "plc_line.hwl.json" -p $MY_VERY_STRONG_PASSWORD
+    apax hwc import-certificate             -n $PLC_NAME -i "plc_line.hwl.json" -p $MY_VERY_STRONG_PASSWORD -C "./certs/$PLC_NAME/pkcs12ForCertificateImport.p12" --purpose "TLS"
+    apax hwc import-certificate             -n $PLC_NAME -i "plc_line.hwl.json" -p $MY_VERY_STRONG_PASSWORD -C "./certs/$PLC_NAME/pkcs12ForCertificateImport.p12" --purpose "WebServer"
+    apax hwc set-accessprotection-password  -n $PLC_NAME -i "plc_line.hwl.json" -p $MY_VERY_STRONG_PASSWORD -l FullAccess 
+    apax hwc manage-users                   -n $PLC_NAME -i "plc_line.hwl.json" set-password -u "usr" -p $MY_VERY_STRONG_PASSWORD
+
+  hwfd: | #compile, copy the HdIds, first download HW using password and upload certificate
+    apax hwc compile -i plc_line.hwl.json -o bin/hwc/ 
+    apax hwid
+    apax hwld -i bin/hwc/$PLC_NAME -t $PLC_IP -M:$MY_VERY_STRONG_PASSWORD --accept-security-disclaimer -l Information
+    apax plc-cert -t $PLC_IP -o ./certs/$PLC_NAME/$PLC_NAME.cer
+
+  hwu: | #compile, copy the HdIds, download HW using certificate
+    apax hwc compile -i plc_line.hwl.json -o bin/hwc/
+    apax hwid
+    apax hwld -i bin/hwc/$PLC_NAME -t $PLC_IP -C ./certs/$PLC_NAME/$PLC_NAME.cer --nonInteractive --accept-security-disclaimer -l Information
 
   hwid: | # copy the generated HwIds from global constants into the type definition, matching the format as the TIA2AX tool creates
     output_dir=src/IO/$PLC_NAME
@@ -206,27 +202,32 @@ scripts:
     echo "    );" >> "$output_file"
     echo "END_TYPE" >> "$output_file"
 
-  swfd:
-    #software build and full download
-    - apax install
-    - apax build --ignore-scripts
-    - dotnet ixc
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
-      $AXTARGETPLATFORMINPUT -r -C ./certs/$PLC_NAME/$PLC_NAME.cer
+  swfd: | #software build and full download
+    apax install
+    apax build --ignore-scripts
+    apax ixc
+    apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r -C ./certs/$PLC_NAME/$PLC_NAME.cer
 
-  swdd:
-    #software build and delta download
-    - apax install
-    - apax build --ignore-scripts
-    - dotnet ixc
-    - apax sld load --accept-security-disclaimer -t $AXTARGET -i
-      $AXTARGETPLATFORMINPUT -r -C ./certs/$PLC_NAME/$PLC_NAME.cer --mode delta
+  swdd: | #software build and delta download
+    apax install
+    apax build --ignore-scripts
+    apax ixc
+    apax sld load --accept-security-disclaimer -t $AXTARGET -i $AXTARGETPLATFORMINPUT -r -C ./certs/$PLC_NAME/$PLC_NAME.cer --mode delta
 
-  all:
-    - START=$(date +%s)
-    - apax hwu
-    - apax swfd
-    - echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in
-      :" $(expr $(date +%s) - $START) "s"
+  all: |
+    START=$(date +%s)
+    apax hwu
+    apax swfd
+    echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in:" $(expr $(date +%s) - $START) "s"
+
+  do_it_all: |
+    START=$(date +%s)
+    apax reset_plc
+    apax set_IPs
+    apax ssc
+    apax hwfd
+    apax swfd
+    echo $(date +%D)"-"$(date +%H)":"$(date +%M)":"$(date +%S) " - Finished in:" $(expr $(date +%s) - $START) "s"
+    #272 seconds
 installStrategy: strict
 apaxVersion: 3.1.1
